# AK_Labs

./: CMakeLists.txt  KeyProcessor.cpp  KeyProcessor.h  Keys.h  Makefile  calculator.cpp  calculator.h  hello.c  main.cpp
ninja/: build.ninja  rules.ninja
patches/: 0001-fix-truncation-error.patch  0001-formatting-use-tabs-instead-of-spaces.patch
